# open-webui

./: package.json
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: main.rs
