[package]
name = "open-webui-desktop"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }
tokio = { version = "1.35.1", features = ["full"] }
reqwest = { version = "0.11.23", features = ["json"] }

[dependencies]
tauri = { version = "1.5.4", features = ["shell-open", "system-tray"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35.1", features = ["full"] }
reqwest = { version = "0.11.23", features = ["json"] }
directories = "5.0.1"
which = "5.0.0"

[features]
custom-protocol = ["tauri/custom-protocol"]
